// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FiguresCard /> renders correctly flipped card 1`] = `
<styled.div
  flipped={true}
  onClick={[MockFunction]}
>
  <styled.div>
    <Figures />
    <styled.div>
      <BestTime />
      <Flips />
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<FiguresCard /> renders correctly unflipped card 1`] = `
<styled.div
  onClick={[MockFunction]}
>
  F
</styled.div>
`;
